Change date from 24-hour clock to 12-hour clock

--- a/app/views/reservations/_reservation.html.erb
+++ b/app/views/reservations/_reservation.html.erb
@@ -16,7 +16,7 @@
 
   <p>
     <strong>Time:</strong>
-    <%= reservation.time %>
+    <%= reservation.time.strftime("%I:%M %p") %>
   </p>
 
 </div>
