--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -32,6 +32,7 @@
   </div>
 
   <div>
+    <%# TODO %>
     <%# When I try to create a new reservation, I get this error
      1 error 
      prohibited this reservation from being saved: Table must exist %>
