Change seats default to 4 - Updated reservation_params to permit table_id - Seating capacity at each table is 4

--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -2,6 +2,10 @@
 
 <h1>Reservations</h1>
 
+<button>
+  <%= link_to "New reservation", new_reservation_path %>
+</button>
+
 <div id="reservations">
   <% @reservations.each do |reservation| %>
     <%= render reservation %>
@@ -10,5 +14,3 @@
     </p>
   <% end %>
 </div>
-
-<%= link_to "New reservation", new_reservation_path %>
