Add start_time and end_time to reservation - Updated sample data to include the start_time and end_time

--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -27,15 +27,16 @@
   </div>
 
   <div>
-    <%= form.label :time, style: "display: block" %>
-    <%= form.time_field :time %>
+    <%= form.label :start_time, style: "display: block" %>
+    <%= form.time_field :start_time %>
   </div>
 
   <div>
-    <%# TODO %>
-    <%# When I try to create a new reservation, I get this error
-     1 error 
-     prohibited this reservation from being saved: Table must exist %>
+    <%= form.label :end_time, style: "display: block" %>
+    <%= form.time_field :end_time %>
+  </div>
+
+  <div>
     <%= form.label :table_id %>
     <%= form.collection_select :table_id, Table.all, :id, :name %>
   </div>
