--- a/app/views/reservations/_reservation.html.erb
+++ b/app/views/reservations/_reservation.html.erb
@@ -16,7 +16,7 @@
 
   <p>
     <strong>Time:</strong>
-    <%= reservation.time.strftime("%I:%M %p") %>
+    <%= reservation.start_time.strftime("%I:%M %p")%>-<%= reservation.end_time.strftime("%I:%M %p")%>
   </p>
 
 </div>
