--- a/app/views/reservations/_reservation.html.erb
+++ b/app/views/reservations/_reservation.html.erb
@@ -15,6 +15,12 @@
   </p>
 
   <p>
+    <strong>Party:</strong>
+    <%= reservation.party_number %>
+  </p>
+
+
+  <p>
     <strong>Time:</strong>
     <%= reservation.start_time.strftime("%I:%M %p")%>-<%= reservation.end_time.strftime("%I:%M %p")%>
   </p>
