--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -37,8 +37,8 @@
   </div>
 
   <div>
-    <%= form.label :party_number, style: "display: block" %>
-    <%= form.number_field :party_number %>
+    <%= form.label :party_size, style: "display: block" %>
+    <%= form.number_field :party_size %>
   </div>
 
   <div>
