Reservation partial displays the table number

--- a/app/views/reservations/_reservation.html.erb
+++ b/app/views/reservations/_reservation.html.erb
@@ -25,4 +25,10 @@
     <%= reservation.start_time.strftime("%I:%M %p")%>-<%= reservation.end_time.strftime("%I:%M %p")%>
   </p>
 
+
+  <p>
+    <strong>Table:</strong>
+    <%= reservation.table.name%>
+  </p>
+
 </div>
