Add Bootstrap card component on the Reservations index.show.html.erb

--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -21,7 +21,6 @@
             </a>
           <% end %>
         </div>
-        <!--list group -->
       </div>
     </div>
   </div>
@@ -35,7 +34,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <%= render 'form', reservation: @reservation || Reservation.new %> <!-- Ensure reservation is not nil -->
+        <%= render 'form', reservation: @reservation || Reservation.new %>
       </div>
     </div>
   </div>
