--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,3 +1,4 @@
+<p style="color: green" class="text-center"><%= notice %></p>
 <div class="container">
   <div class="row">
     <p style="color: green"><%= notice %></p>
