--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -1,10 +1,13 @@
-<h1>Editing reservation</h1>
+<div class="d-flex justify-content-center">
+    <div class="jumbotron my-auto">
+      <h1 class="display-3">Editing reservation</h1>
 
-<%= render "form", reservation: @reservation %>
+      <%= render "form", reservation: @reservation %> 
 
-<br>
+  <br>
 
-<div>
-  <%= link_to "Show this reservation", @reservation %> |
-  <%= link_to "Back to reservations", reservations_path %>
+  <div class="text-center">
+    <%= link_to "Show this reservation", @reservation %> |
+    <%= link_to "Back to reservations", reservations_path %>
+  </div>
 </div>
