--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,7 +1,4 @@
 <div class="card">
-
-  <p style="color: green"><%= notice %></p>
-
   <div class="card-header">
     <%= link_to "Reservation ##{@reservation.id}", @reservation %>
   </div>
@@ -11,23 +8,15 @@
     <div class="row">
       <div class="col">
         <div class="d-grid">
-          <%= link_to edit_reservation_path(@reservation), class: "btn btn-outline-secondary" do  %>
-            <i class="fa-regular fa-pen-to-square"></i>
-          <% end %>
-          <%# TODO %>
-          <%# Possible solution? %>
-          <%# <button type="button" class="ms-auto btn btn-lg btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#editReservationModal">
+          <button type="button" class="ms-auto btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#editReservationModal">
             Edit reservation
-          </button> %>
+          </button>
         </div>
       </div>
       <div class="col">
         <div class="d-grid">
-          <div class="btn btn-outline-secondary">
-            <%# TODO  %>
-            <%# Since there is no delete/destroy helper route link_to isn't working %>
-            <%= button_to "Delete this reservation", @reservation, method: :delete %>
-          </div>
+          <%= button_to "Delete this reservation", @reservation, method: :delete, class: "btn btn-outline-secondary" %>
+          <%# <i class="fa-regular fa-trash-can"></i> %>
         </div>
       </div>
     </div>
