Update Bootstrap styling on reservations/new and add notice to reservations/show

--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,3 +1,4 @@
+<p style="color: green" class="text-center"><%= notice %></p>
 <div class="card">
   <div class="card-header">
     <%= link_to "Reservation ##{@reservation.id}", @reservation %>
