--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,9 +1,12 @@
-<h1>New reservation</h1>
+<div class="d-flex justify-content-center">
+    <div class="jumbotron my-auto">
+      <h1 class="display-3">New reservation</h1>
 
-<%= render "form", reservation: @reservation %>
+      <%= render "form", reservation: @reservation %> 
 
-<br>
+  <br>
 
-<div>
-  <%= link_to "Back to reservations", reservations_path %>
+  <div class="text-center">
+    <%= link_to "Back to reservations", reservations_path %>
+  </div>
 </div>
