--- a/app/views/reservations/_search.html.erb
+++ b/app/views/reservations/_search.html.erb
@@ -1,17 +1,18 @@
-<%= search_form_for @q do |f| %>
-<p>Narrow results:</p>
+<%= search_form_for @q, url: reservations_path, method: :get, html: { class: 'd-flex flex-column' } do |f| %>
+  <p class="mb-3">Narrow results:</p>
 
-<div>
-<%= f.label :name_cont, "Name containing" %>
-<%= f.text_field :name_cont, :placeholder => "Enter a few characters" %>
-</div>
+  <div class="mb-3">
+    <%= f.label :name_cont, "Name containing", class: "form-label" %>
+    <%= f.text_field :name_cont, placeholder: "Search by name", class: "form-control" %>
+  </div>
 
-<div>
-<%= f.label :date, "Date" %>
-<%= f.text_field :date, :placeholder => "Enter a date" %>
-</div>
+  <div class="mb-3">
+    <%= f.label :date, "Date", class: "form-label" %>
+    <%= f.text_field :date, placeholder: "Enter a date", class: "form-control" %>
+  </div>
 
-<%= f.submit :class => "btn btn-primary btn-block" %>
-
-<a href="/reservations">Clear filters</a>
+  <div class="d-flex justify-content-between">
+    <%= f.submit 'Search', class: "btn btn-primary" %>
+    <%= link_to 'Clear filters', reservations_path, class: "btn btn-outline-secondary" %>
+  </div>
 <% end %>
