--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -5,7 +5,7 @@
       <div class="card">
         <div class="card-header d-flex align-items-center">
           <h1 class="h6">All Reservations</h1>
-          <button type="button" class="ms-auto btn btn-sm btn-outline-success" data-bs-toggle="modal" data-bs-target="#newReservationModal">
+          <button type="button" class="ms-auto btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#newReservationModal">
             Make a new reservation
           </button>
         </div>
