--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+
+ .navbar > .container-fluid {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+
+  @media (min-width:768px) {
+    .container {
+        max-width: 900px;
+        }
+  }
