--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,7 +1,7 @@
 <p style="color: green" class="text-center"><%= notice %></p>
 <div class="container">
   <div class="row">
-    <div class="offset-md-3 col-md-6">
+    <div>
       <div class="card">
         <div class="card-header d-flex align-items-center">
           <h1 class="h6">All Reservations</h1>
